# lazy_admin

./: .editorconfig  .pre-commit-config.yaml  mypy.ini  pyproject.toml  tox.ini
lazy_admin/: __init__.py  lazy_admin.py
lazy_admin/components/: component.py  types.py
